# docs/swagger.json
@@ -322,17 +322,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "offers"
+                    "services"
                 ],
                 "summary": "Créer une offre de service",
                 "parameters": [
                     {
                         "description": "Offre à créer",
-                        "name": "offer",
+                        "name": "service",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.Offer"
+                            "$ref": "#/definitions/service.Service"
                         }
                     }
                 ],
@@ -340,7 +340,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/service.Offer"
+                            "$ref": "#/definitions/service.Service"
                         }
                     },
                     "400": {
@@ -366,13 +366,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "offers"
+                    "services"
                 ],
                 "summary": "Récupérer une offre par ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID de l'offre",
+                        "description": "ID du service",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -382,7 +382,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.Offer"
+                            "$ref": "#/definitions/service.Service"
                         }
                     },
                     "404": {
@@ -793,7 +793,7 @@
                 }
             }
         },
-        "service.Offer": {
+        "service.Service": {
             "type": "object",
             "properties": {
                 "actif": {
